[package]
name = "dca-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dca_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
#amm-anchor = {path = "../../amm-anchor"}
solana-program = "~1.13.2"
raydium-contract-instructions = { path = "../../lib"}